# asset-factory-blueprint

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  Makefile  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  codemeta.json  mkdocs.yml  pyproject.toml  references.bib
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: __init__.py
configs/: agent-workflow.json  capability-registry.json  external-models.json  fix-library.json  library-registry.json  provider-policy.json  reconstruction-backends.json  repository-policy.json  runtime-config.example.json  skill-registry.json  stage-contracts.json  texture-defaults.json  tool-surface.json  validation-gates.json  vlm-review-policy.json
deploy/: .env.example  Dockerfile  README.md  docker-compose.asset-factory.yml
docs/: agent-system.md  blueprint.md  citation-and-reproducibility.md  environment-reference.md  index.md  manifest-contracts.md  project-workspaces.md  provider-abstraction.md  quickstart.md  reference-architecture.md  reference-run-capsule.md  repository-structure.md  requirements.md  runthrough.md  runtime-architecture.md  skill-sdk.md  source-map.md  support-matrix.md  toolchain.md  troubleshooting.md  walkthrough.md
schemas/: asset-layout-manifest.schema.json  asset-programme-intake-manifest.schema.json  evaluation-manifest.schema.json  external-model-run-manifest.schema.json  governance-record.schema.json  isaac-runtime-evidence.schema.json  layer-ownership-manifest.schema.json  library-index.schema.json  material-inference-manifest.schema.json  mesh-verification-record.schema.json  mutation-plan.schema.json  nonvisual-material-manifest.schema.json  operator-release-decision.schema.json  physics-articulation-manifest.schema.json  provenance-record.schema.json  reconstruction-manifest.schema.json  reference-run-capsule.schema.json  rl-environment-manifest.schema.json  run-request.schema.json  segmentation-manifest.schema.json  simready-asset-manifest.schema.json  (+8 more)
scripts/: afb  (+3 more)
(+279 files in other folders)
